--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@google/genai": "^1.12.0",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
+    "@types/html2canvas": "^0.5.35",
     "chart.js": "^4.5.0",
     "firebase": "^12.0.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
