--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/html2canvas": "^0.5.35",
     "chart.js": "^4.5.0",
     "firebase": "^12.0.0",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1"
