--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jsqr": "^1.4.0",
     "ogl": "^1.0.11",
+    "quagga": "^0.6.16",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1"
