--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
     "ogl": "^1.0.11",
+    "openai": "^5.12.0",
     "quagga": "^0.6.16",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
